fix scrolling spacing
Fixed bug where clicking on a nav button would scroll you to a point where the top bar is hiding some text

--- a/apps/megaphone-ui/src/app/pages/home-page/home-page.scss
+++ b/apps/megaphone-ui/src/app/pages/home-page/home-page.scss
@@ -2,8 +2,6 @@
 @import '../../../mixins.scss';
 
 .home-page-container {
-  padding-top: $top-bar-height;
-
   @include background-image('../../../assets/images/starry-sky.jpg', center, bottom, 400px);
 }
 
